# nvblox_ros_navigation_goal

./: package.xml  setup.cfg  setup.py
launch/: isaac_ros_navigation_goal.launch.py
maps/: goals.txt  isaac_ros_laboratory.yaml  isaac_test_map.yaml
nvblox_ros_navigation_goal/: random_set_goal.py  set_goal.py
nvblox_ros_navigation_goal/goal_generators/: event_handler.py  py.py
utils/: cluster_center_point.py  point.ipynb  utils.py
